@@ -136,7 +136,7 @@ public class PipelineBusTest {
 
     @Test
     public void sendingEmptyListToNowhereStillReturns() {
-        bus.registerSender(output, Arrays.asList("not_an_address"));
+        bus.registerSender(output, List.of("not_an_address"));
         bus.sendEvents(output, Collections.emptyList(), true);
     }
 
